<resources>
    <string name="app_name">Project akkords</string>
    <string name="button1">Аккорды A</string>
    <string name="button2">Аккорды C</string>
    <string name="button3">Аккорды D</string>
    <string name="button4">Аккорды E</string>
    <string name="button5">Аккорды F</string>
    <string name="button6">Аккорды G</string>
    <string name="button7">Аккорды H</string>
    <string name="textView">Аккорды - это одновременное звучание нескольких звуков.</string>
</resources>