<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_osnova2"
    tools:context=".Accords_0">

    <Button
        android:id="@+id/button7"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button7"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textView"
        android:textColor="#000001"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button1"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button2"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button3"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button4"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button5"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/button6"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>